--- a/online-math.css
+++ b/online-math.css
@@ -71,7 +71,7 @@ p {
     visibility: hidden;
     opacity: 0;
     padding: 0;
-    background-color: brown;
+    background-color: #5c5b60;
     color: white;
     width: 80px;
     border: none;
